fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -360,8 +360,7 @@ strong {
   height: fit-content;
   max-width: 355px;
   width: 100%;
-  margin: 1rem auto;
-  align-self: center;
+  margin: 0.5rem auto 1rem auto;
 }
 
 .why-reasons i {
